@@ -37,6 +37,7 @@ export(getPrevalentFeatures)
 export(getPrevalentTaxa)
 export(getRareFeatures)
 export(getRareTaxa)
+export(getTaxonomyRanks)
 export(getTopFeatures)
 export(getTopTaxa)
 export(getUniqueFeatures)
@@ -78,6 +79,7 @@ export(runJSD)
 export(runNMDS)
 export(runOverlap)
 export(runUnifrac)
+export(setTaxonomyRanks)
 export(splitByRanks)
 export(splitOn)
 export(subsampleCounts)
@@ -308,6 +310,7 @@ importFrom(tibble,rownames_to_column)
 importFrom(tibble,tibble)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
+importFrom(utils,assignInMyNamespace)
 importFrom(utils,combn)
 importFrom(utils,head)
 importFrom(utils,read.delim)
